Caching improvements, minor layout bug for comparison screen, rounding problem solved in Webkit / Opera / etc.

--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -136,7 +136,8 @@ a:hover {
 }
 .rounded {
 	-webkit-border-radius: 8px;    /* for Safari */
-    -moz-border-radius: 8px;       /* for Firefox */
+  -moz-border-radius: 8px;       /* for Firefox */
+  border-radius: 8px;            /* Opera, KHTML, others */
 }
 .rounded_bd {
     background-color: white;          /* if needed */
